--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,11 @@
       <classifier>javadoc</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>com.h2database</groupId>
+      <artifactId>h2</artifactId>
+      <version>1.4.200</version>
+    </dependency>
   </dependencies>
 
   <build>
