--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
       <artifactId>h2</artifactId>
       <version>1.4.200</version>
     </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.16.22</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
