--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
           <artifactId>mybatis-generator-maven-plugin</artifactId>
           <version>1.3.5</version>
           <configuration>
-            <contexts>PlayersDB</contexts>
+            <contexts>BugsDB</contexts>
             <verbose>true</verbose>
           </configuration>
           <executions>
