--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,12 @@
       <artifactId>java-string-similarity</artifactId>
       <version>2.0.0</version>
     </dependency>
+    <!-- PrimeFaces -->
+    <dependency>
+      <groupId>org.primefaces</groupId>
+      <artifactId>primefaces</artifactId>
+      <version>7.0</version>
+    </dependency>
   </dependencies>
 
   <build>
